logs/validate.20260327-110825.log
error[E0425]: cannot find function `diverge` in this scope
   --> src/Chap61/EdgeContractionMtEph.rs:102:40
    |
102 |             Err(_) => { assume(false); diverge() },
    |                                        ^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  9 +     use crate::Concurrency::diverge;
    |

error[E0405]: cannot find trait `ClonePreservesView` in this scope
   --> src/Chap63/ConnectivityMtEph.rs:155:61
    |
155 |     pub fn count_components_hof<V: StT + MtT + Hash + Ord + ClonePreservesView + 'static>(graph: &UnDirGraphMtEph<V>, seed: u64) ->...
    |                                                             ^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this trait
    |
 12 +     use crate::vstdplus::clone_view::clone_view::ClonePreservesView;
    |

error[E0405]: cannot find trait `ClonePreservesView` in this scope
   --> src/Chap63/ConnectivityMtEph.rs:175:65
    |
175 |     pub fn connected_components_hof<V: StT + MtT + Hash + Ord + ClonePreservesView + 'static>(
    |                                                                 ^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this trait
    |
 12 +     use crate::vstdplus::clone_view::clone_view::ClonePreservesView;
    |

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0405, E0425.
For more information about an error, try `rustc --explain E0405`.
Elapsed: 10s
Sampled Memory Usage: peak rust_verify RSS: 672MB, peak z3 RSS: 0MB, min free: 22024MB
Sampled CPU Usage: rust_verify: 10s, z3 children: 0s
